# account-register-manager

./: .dockerignore  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  config.example.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: sync-register-sources.yml
account_register_manager/: __init__.py  account_service.py  app.py  auth.py  cliproxy_upload_service.py  config.py  json_file.py  openai_backend_api.py  proxy_pool_service.py  proxy_service.py  register_service.py  storage.py  time_utils.py
account_register_manager/register/: __init__.py  freemail_provider.py  mail_provider.py  openai_register.py  pkce.py  sentinel.py
account_register_manager/register/utils/: sentinel.py
scripts/: sync_register_sources.py
static/: index.html
